RESOLVED FIXED89320
Fix Framebuffer restrictions
https://bugs.webkit.org/show_bug.cgi?id=89320
Summary Fix Framebuffer restrictions
Gregg Tavares
Reported 2012-06-17 19:09:17 PDT
Fix Framebuffer restrictions
Attachments
Patch (2.52 KB, patch)
2012-06-17 19:10 PDT, Gregg Tavares
no flags
Gregg Tavares
Comment 1 2012-06-17 19:10:52 PDT
Gregg Tavares
Comment 2 2012-06-17 19:12:35 PDT
Honestly I don't know why the LayoutTests didn't catch this. It's the exact same test that failing in the chrome gpu_tests. Maybe they get an INCOMPLETE_FRAMEBUFFER and so don't take a certain path.
Kenneth Russell
Comment 3 2012-06-17 22:56:51 PDT
Comment on attachment 148035 [details] Patch Looks good; thanks for tracking this down. It looks like framebuffer-object-attachment.html was skipped on the Mac platform in https://bugs.webkit.org/show_bug.cgi?id=82805 and this might be why this slipped through the cracks on the Mac platform. Could you take a look through the results of platform/mac/fast/canvas/webgl/framebuffer-object-attachment-expected.txt ? It looks to me like it is returning FRAMEBUFFER_COMPLETE in one case where the platform-independent results in fast/canvas/webgl/framebuffer-object-attachment-expected.txt return FRAMEBUFFER_UNSUPPORTED. Also, there are a couple of platform-specific expected results (platform/chromium-mac-snowleopard, platform/mac-snowleopard) which are identical to the platform-independent results and which could be deleted.
WebKit Review Bot
Comment 4 2012-06-17 23:33:04 PDT
Comment on attachment 148035 [details] Patch Clearing flags on attachment: 148035 Committed r120571: <http://trac.webkit.org/changeset/120571>
WebKit Review Bot
Comment 5 2012-06-17 23:33:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.