Fix Framebuffer restrictions https://bugs.webkit.org/show_bug.cgi?id=89320

Patch by Gregg Tavares <gman@google.com> on 2012-06-17
Reviewed by Kenneth Russell.

No new tests, just fixing old ones

* html/canvas/WebGLFramebuffer.cpp:
(WebCore::WebGLFramebuffer::checkStatus):

git-svn-id: svn://svn.chromium.org/blink/trunk@120571 bbb929c8-8fbe-4397-9dbb-9b2b20218538